Cycles/GPU - A lot of fireflies is this scene (mostly from Buildbot) #48571

Closed
opened 2016-06-02 14:30:11 +02:00 by YAFU · 7 comments

System Information
Kubuntu Linux 14.04 64bits - GTX 960, 352.79 driver

Blender Version
Broken: mostly from Buildbot Hash 24712b1

            Also a little less on 2.77a

Short description of error
I had a scene used to test slow materials on GPU:
slow_cycles_gpu_with_sss.blend

and I have found that in Blender from Buildbot generates a lot of fireflies in the material including Subsurface Scattering. This does not happen with CPU.
Anyway, I found that this problem also occurs in Blender 2.77a, but this is much less noticeable.

Another thing to note, if I do not use SSS as in this scene:
slow_cycles_gpu.blend

There is also some little more fireflies from Buildbot compared to Blender 2.77a, but also fireflies appear on CPU.

Exact steps for others to reproduce the error
Open the scenes that I have shared and render in GPU / CPU in the corresponding versions of Blender

**System Information** Kubuntu Linux 14.04 64bits - GTX 960, 352.79 driver **Blender Version** Broken: mostly from Buildbot Hash 24712b1 ``` Also a little less on 2.77a ``` **Short description of error** I had a scene used to test slow materials on GPU: [slow_cycles_gpu_with_sss.blend](https://archive.blender.org/developer/F315733/slow_cycles_gpu_with_sss.blend) and I have found that in Blender from Buildbot generates a lot of fireflies in the material including Subsurface Scattering. This does not happen with CPU. Anyway, I found that this problem also occurs in Blender 2.77a, but this is much less noticeable. Another thing to note, if I do not use SSS as in this scene: [slow_cycles_gpu.blend](https://archive.blender.org/developer/F315737/slow_cycles_gpu.blend) There is also some little more fireflies from Buildbot compared to Blender 2.77a, but also fireflies appear on CPU. **Exact steps for others to reproduce the error** Open the scenes that I have shared and render in GPU / CPU in the corresponding versions of Blender
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
Sergey Sharybin self-assigned this 2016-06-06 15:25:44 +02:00

This issue was referenced by 14f9a5aa1d

This issue was referenced by 14f9a5aa1de869b0e611880f38c56708d54b6db3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed fireflies on GPU. Remaining ones i think are related on 2cfadec which made homogenous volume integrator to be used (which is correct here) combined with #48383. So as a part of bugfix of this particular report there's not much to do now, other issues hopefully will be fixed with the report i've mentioned above.

Fixed fireflies on GPU. Remaining ones i think are related on 2cfadec which made homogenous volume integrator to be used (which is correct here) combined with #48383. So as a part of bugfix of this particular report there's not much to do now, other issues hopefully will be fixed with the report i've mentioned above.
Author

Thank you. Now there is no fireflies and CPU and GPU render result match.

Thank you. Now there is no fireflies and CPU and GPU render result match.

This issue was referenced by blender/cycles@a44c454e1d

This issue was referenced by blender/cycles@a44c454e1d162d601ec5284663b4adfec46f1467
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48571
No description provided.