Fix T48571: Cycles/GPU - A lot of fireflies on SSS+Volume

Was some accumulated precision error happening.